<resources>
    <string name="app_name">My Wallet</string>
    <string name="MainLabel">My Wallet</string>
    <string name="label_delete">Delete</string>
    <string name="name_string">Name</string>
    <string name="note_string">Note</string>
    <string name="save_string">Save</string>
    <string name="empty_name_warning">Name cannot be empty!</string>
    <string name="wallet_label">Wallet</string>
    <string name="value_item_label">Value Item</string>
    <string name="counterparty_label">Counterparty</string>
    <string name="sum_label">Sum</string>
    <string name="date_label">Date</string>
    <string name="input_text_hint">Input text</string>
    <string name="input_sum_hint">Input sum</string>
    <string name="warning_no_wallet_for_transaction">No wallet available for operation</string>
    <string name="question_delete_wallet">Do you really want to delete the wallet?</string>
    <string name="warning_title">Warning</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="warning_empty_sum">The transaction sum cannot be empty!</string>
    <string name="label_counterparties">Counterparties</string>
    <string name="label_counterparty">Counterparty</string>
    <string name="label_value_item">Value item</string>
    <string name="label_value_items">Value items</string>
    <string name="label_Transaction">Transaction</string>
    <string name="label_current_balance">Current balance</string>
    <string name="receipts_label">Receipts</string>
    <string name="expense_Label">Expenses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="turnover_Label">turnover</string>
    <string name="data_on_counterparties_for_the_period">Data on counterparties for the period</string>
    <string name="data_on_value_items_for_the_period">Data on value items for the period</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="sign_out_Button">Sign out</string>
    <string name="sign_in_Button">Sign in</string>
    <string name="folder_creation_fail">Failed to create folder</string>
    <string name="totalReceipts_Label">Total receipts</string>
    <string name="total_Expenses_Label">Total Expenses</string>
    <string name="all_Transactions_List">All</string>
    <string name="transactions_per_day">Day</string>
    <string name="transactions_per_month">Month</string>
    <string name="transactions_per_year">Year</string>
    <string name="get_started">Get started</string>
    <string name="label_skip">Skip</string>
    <string name="DownloadError">\"Errors occurred during download! \"</string>
    <string name="DownloadSuccess">Download successful!</string>
    <string name="backup_title">Backup</string>
</resources>